fixing display page on mobile v6

--- a/src/routes/home/home.styles.scss
+++ b/src/routes/home/home.styles.scss
@@ -2,7 +2,7 @@
 
 .home-setup {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
 
   @media only screen and (max-width: $bp-small) {
